--- a/public/index.html
+++ b/public/index.html
@@ -25,12 +25,18 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <script async id="trygr" src="sdk_v2.min.js"  data-client-id="477cfc99-6be6-44d9-b18f-4e403826e591"></script>
+    <script async id="trygr" src="sdk_v2.min.js"  data-client-id="0cd8ef80-ae3f-459a-9169-18a2ffba059e"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <div id="homepage_product">
+    <div class="homepage__slider--advertsBanner1">
+    </div>
+    <div class="homepage__slider--advertsBanner2">
+    </div>
+    <div class="homepage__slider--advertsBanner3">
+    </div>
+    <div class="homepage__slider--advertsBanner4">
     </div>
     <!--
       This HTML file is a template.
